<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChangePasswordActivity">

    <!-- Header -->

    <TextView
        android:id="@+id/change_password_text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/change_password_text_header_change_password"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:fontFamily="@font/commissioner_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Password input -->

    <TextView style="@style/login_text"
        android:id="@+id/change_password_text_password"
        android:layout_marginTop="72dp"
        android:text="@string/change_password_text_password"
        app:layout_constraintStart_toEndOf="@id/change_password_barrier_start"
        app:layout_constraintTop_toBottomOf="@id/change_password_text_header" />

    <EditText style="@style/login_edit_text"
        android:id="@+id/change_password_edit_password"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintStart_toEndOf="@id/change_password_barrier_start"
        app:layout_constraintTop_toBottomOf="@id/change_password_text_password" />

    <CheckBox
        android:id="@+id/change_password_check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_check_password"
        app:layout_constraintStart_toEndOf="@id/change_password_barrier_start"
        app:layout_constraintTop_toBottomOf="@id/change_password_edit_password" />

    <!-- Change -->

    <androidx.appcompat.widget.AppCompatButton style="@style/login_button_enter"
        android:id="@+id/change_password_button_change"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:text="@string/change_password_button_change"
        app:layout_constraintEnd_toStartOf="@id/change_password_barrier_end"
        app:layout_constraintTop_toBottomOf="@id/change_password_check_password" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/change_password_barrier_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="change_password_text_header" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/change_password_barrier_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="change_password_edit_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
