<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp">

    <!-- Header -->

    <TextView
        android:id="@+id/cart_text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/commissioner_bold"
        android:text="@string/cart_text_header_cart"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Books -->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/cart_scroll_book_container"
        android:layout_width="wrap_content"
        android:layout_height="364dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@id/cart_barrier"
        app:layout_constraintTop_toBottomOf="@id/cart_text_header">

        <LinearLayout
            android:id="@+id/cart_layout_book_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Books to be programmatically added here -->

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Subtotal -->

    <TextView
        android:id="@+id/cart_text_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/commissioner_light"
        android:text="@string/cart_text_subtotal"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/cart_barrier"
        app:layout_constraintTop_toBottomOf="@id/cart_scroll_book_container"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/cart_text_subtotal_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/commissioner_bold"
        android:text="@string/cart_text_subtotal_cost"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/cart_text_subtotal"
        app:layout_constraintBaseline_toBaselineOf="@+id/cart_text_subtotal" />

    <!-- Checkout -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cart_button_checkout"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_cart_button"
        android:fontFamily="@font/commissioner_bold"
        android:text="@string/cart_button_checkout"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:letterSpacing="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_text_subtotal" />

    <!-- Barriers -->

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/cart_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="cart_text_header" />

</androidx.constraintlayout.widget.ConstraintLayout>
