<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp">

    <!-- Header -->

    <TextView
        android:id="@+id/home_text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/home_text_header_welcome"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:fontFamily="@font/commissioner_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Reading progress -->

    <ProgressBar
        android:id="@+id/home_bar_progress"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/home_progress_bar"
        app:layout_constraintStart_toEndOf="@id/home_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_text_welcome"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/home_text_progress_count"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/home_text_progress_count"
        android:textSize="42sp"
        android:textColor="@color/black"
        android:fontFamily="@font/commissioner_medium"
        app:layout_constraintStart_toEndOf="@id/home_bar_progress"
        app:layout_constraintTop_toBottomOf="@id/home_text_welcome" />

    <TextView
        android:id="@+id/home_text_goal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/home_text_progress_goal"
        android:textSize="28sp"
        android:fontFamily="@font/commissioner_medium"
        app:layout_constraintStart_toEndOf="@id/home_bar_progress"
        app:layout_constraintTop_toBottomOf="@id/home_text_progress_count" />

    <Button
        android:id="@+id/home_button_update_goal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:text="@string/home_button_update_goal"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toEndOf="@id/home_bar_progress"
        app:layout_constraintTop_toBottomOf="@id/home_text_goal" />

    <!-- Favorites -->

    <TextView
        android:id="@+id/home_text_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/commissioner_medium"
        android:text="@string/home_text_favorites"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@id/home_barrier"
        app:layout_constraintTop_toBottomOf="@id/home_button_update_goal" />


    <ImageView
        android:id="@+id/home_image_favorites"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/favorite"
        app:layout_constraintBottom_toBottomOf="@id/home_text_favorites"
        app:layout_constraintStart_toEndOf="@id/home_text_favorites"
        app:layout_constraintTop_toTopOf="@id/home_text_favorites"
        app:layout_constraintVertical_bias="1.0" />

    <HorizontalScrollView
        android:id="@+id/home_scroll_favorites"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@id/home_barrier"
        app:layout_constraintTop_toBottomOf="@id/home_text_favorites">

        <LinearLayout
            android:id="@+id/home_layout_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- TODO: REMOVE -->
            <!--            <ImageButton-->
            <!--                android:tag="Book"-->
            <!--                android:layout_width="140dp"-->
            <!--                android:layout_height="195dp"-->
            <!--                android:background="@color/gray" />-->

        </LinearLayout>

    </HorizontalScrollView>

    <!-- Bookshelf -->

    <TextView
        android:id="@+id/home_text_bookshelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/commissioner_medium"
        android:text="@string/home_text_bookshelf"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@id/home_barrier"
        app:layout_constraintTop_toBottomOf="@id/home_scroll_favorites" />

    <ImageView
        android:id="@+id/home_image_shelf"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/shelf"
        app:layout_constraintBottom_toBottomOf="@id/home_text_bookshelf"
        app:layout_constraintStart_toEndOf="@id/home_text_bookshelf"
        app:layout_constraintTop_toTopOf="@id/home_text_bookshelf"
        app:layout_constraintVertical_bias="1.0" />

    <HorizontalScrollView
        android:id="@+id/home_scroll_bookshelf"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@id/home_barrier"
        app:layout_constraintTop_toBottomOf="@id/home_text_bookshelf">

        <LinearLayout
            android:id="@+id/home_layout_bookshelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- TODO: REMOVE -->
            <!--            <ImageButton-->
            <!--                android:tag="Book"-->
            <!--                android:layout_width="140dp"-->
            <!--                android:layout_height="195dp"-->
            <!--                android:background="@color/gray" />-->

        </LinearLayout>

    </HorizontalScrollView>

    <!-- Barriers -->

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/home_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="home_text_welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>
